added code for dataloader

--- a/humor_dataloader.ipynb
+++ b/humor_dataloader.ipynb
@@ -181,8 +181,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_set = HumorDataset(dev)\n",
-    "eval_set = HumorDataset(dev)\n",
+    "training_set = HumorDataset(train)\n",
+    "eval_set = HumorDataset(test)\n",
     "test_set = HumorDataset(dev)"
    ]
   },
@@ -210,14 +210,27 @@
       "*********\n",
       "punchline shape:  torch.Size([10, 20, 456])\n",
       "context shape:  torch.Size([10, 5, 20, 456])\n",
-      "humor labels:  tensor([[0.],\n",
+      "humor labels:  tensor([[1.],\n",
+      "        [0.],\n",
       "        [1.],\n",
       "        [1.],\n",
       "        [0.],\n",
       "        [0.],\n",
       "        [1.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [0.]])\n",
+      "*********\n",
+      "punchline shape:  torch.Size([10, 20, 456])\n",
+      "context shape:  torch.Size([10, 5, 20, 456])\n",
+      "humor labels:  tensor([[1.],\n",
+      "        [1.],\n",
       "        [0.],\n",
       "        [1.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [0.],\n",
       "        [0.],\n",
       "        [1.]])\n",
       "*********\n",
@@ -225,25 +238,25 @@
       "context shape:  torch.Size([10, 5, 20, 456])\n",
       "humor labels:  tensor([[1.],\n",
       "        [1.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
       "        [0.],\n",
       "        [1.],\n",
-      "        [1.],\n",
       "        [0.],\n",
-      "        [0.]])\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [1.]])\n",
       "*********\n",
       "punchline shape:  torch.Size([10, 20, 456])\n",
       "context shape:  torch.Size([10, 5, 20, 456])\n",
-      "humor labels:  tensor([[1.],\n",
-      "        [1.],\n",
-      "        [1.],\n",
+      "humor labels:  tensor([[0.],\n",
       "        [0.],\n",
       "        [1.],\n",
+      "        [1.],\n",
       "        [0.],\n",
+      "        [1.],\n",
       "        [0.],\n",
-      "        [0.],\n",
+      "        [1.],\n",
       "        [0.],\n",
       "        [0.]])\n",
       "*********\n",
@@ -252,13 +265,13 @@
       "humor labels:  tensor([[0.],\n",
       "        [1.],\n",
       "        [0.],\n",
+      "        [0.],\n",
+      "        [1.],\n",
       "        [1.],\n",
       "        [0.],\n",
       "        [1.],\n",
-      "        [0.],\n",
       "        [1.],\n",
-      "        [0.],\n",
-      "        [0.]])\n",
+      "        [1.]])\n",
       "*********\n",
       "punchline shape:  torch.Size([10, 20, 456])\n",
       "context shape:  torch.Size([10, 5, 20, 456])\n",
@@ -266,24 +279,11 @@
       "        [0.],\n",
       "        [0.],\n",
       "        [1.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [0.]])\n",
-      "*********\n",
-      "punchline shape:  torch.Size([10, 20, 456])\n",
-      "context shape:  torch.Size([10, 5, 20, 456])\n",
-      "humor labels:  tensor([[0.],\n",
-      "        [0.],\n",
       "        [0.],\n",
       "        [1.],\n",
-      "        [0.],\n",
+      "        [1.],\n",
       "        [1.],\n",
       "        [0.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
       "        [0.]])\n"
      ]
     }
