added codes for dataloader

--- a/humor_dataloader.ipynb
+++ b/humor_dataloader.ipynb
@@ -177,13 +177,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "training_set = HumorDataset(train)\n",
-    "eval_set = HumorDataset(test)\n",
-    "test_set = HumorDataset(dev)"
+    "dev_set = HumorDataset(dev)\n",
+    "test_set = HumorDataset(tes)"
    ]
   },
   {
