--- a/humor_dataloader.ipynb
+++ b/humor_dataloader.ipynb
@@ -177,117 +177,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "training_set = HumorDataset(train)\n",
     "dev_set = HumorDataset(dev)\n",
-    "test_set = HumorDataset(tes)"
+    "test_set = HumorDataset(test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "batch=10\n",
     "train_dataloader = DataLoader(training_set, batch_size=batch, shuffle=True)\n",
-    "dev_dataloader = DataLoader(eval_set, batch_size=batch, shuffle=True)\n",
+    "dev_dataloader = DataLoader(dev_set, batch_size=batch, shuffle=True)\n",
     "test_dataloader = DataLoader(test_set, batch_size=1, shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*********\n",
-      "punchline shape:  torch.Size([10, 20, 456])\n",
-      "context shape:  torch.Size([10, 5, 20, 456])\n",
-      "humor labels:  tensor([[1.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [1.],\n",
-      "        [1.],\n",
-      "        [0.]])\n",
-      "*********\n",
-      "punchline shape:  torch.Size([10, 20, 456])\n",
-      "context shape:  torch.Size([10, 5, 20, 456])\n",
-      "humor labels:  tensor([[1.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [1.],\n",
-      "        [1.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [1.]])\n",
-      "*********\n",
-      "punchline shape:  torch.Size([10, 20, 456])\n",
-      "context shape:  torch.Size([10, 5, 20, 456])\n",
-      "humor labels:  tensor([[1.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [1.]])\n",
-      "*********\n",
-      "punchline shape:  torch.Size([10, 20, 456])\n",
-      "context shape:  torch.Size([10, 5, 20, 456])\n",
-      "humor labels:  tensor([[0.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [0.]])\n",
-      "*********\n",
-      "punchline shape:  torch.Size([10, 20, 456])\n",
-      "context shape:  torch.Size([10, 5, 20, 456])\n",
-      "humor labels:  tensor([[0.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [1.],\n",
-      "        [1.]])\n",
-      "*********\n",
-      "punchline shape:  torch.Size([10, 20, 456])\n",
-      "context shape:  torch.Size([10, 5, 20, 456])\n",
-      "humor labels:  tensor([[1.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [1.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [0.]])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "x_p.shape=batch_size*maximum number of words in sentence * 456\n",
