fixed dataloader for snd version

--- a/humor_dataloader.ipynb
+++ b/humor_dataloader.ipynb
@@ -38,11 +38,11 @@
     "\n",
     "example:\n",
     "\n",
-    "if max_sen_len = 20 then the punchline sentence dimension = 20 * 456. \n",
-    "    where 456 = word embedding (300) + covarep (81) + openface(75)  \n",
+    "if max_sen_len = 20 then the punchline sentence dimension = 20 * 752. \n",
+    "    where 752 = word embedding (300) + covarep (81) + openface(371)  \n",
     "\n",
     "if max_sen_len = 20 and max_context_len = 5 that means context can have maximum 5 sentences \n",
-    "and each sentence will have maximum 20 words. The context dimension will be 5 * 20 * 456 \n",
+    "and each sentence will have maximum 20 words. The context dimension will be 5 * 20 * 752 \n",
     "\n",
     "We will do left padding with zeros to maintaing the same dimension.\n",
     "\n",
@@ -56,17 +56,19 @@
     "        self.id_list = id_list\n",
     "        openface_file=\"openface_features_sdk.pkl\"\n",
     "        covarep_file=\"covarep_features_sdk.pkl\"\n",
-    "        word_idx_file=\"word_embedding_indexes_sdk.pkl\"\n",
+    "        language_file=\"language_sdk.pkl\"\n",
     "        word_embedding_list_file=\"word_embedding_list.pkl\"\n",
     "        humor_label_file=\"humor_label_sdk.pkl\"\n",
     "        \n",
     "        self.word_aligned_openface_sdk=load_pickle(openface_file)\n",
     "        self.word_aligned_covarep_sdk=load_pickle(covarep_file)\n",
-    "        self.word_embedding_idx_sdk=load_pickle(word_idx_file)\n",
+    "        self.language_sdk=load_pickle(language_file)\n",
     "        self.word_embedding_list_sdk=load_pickle(word_embedding_list_file)\n",
     "        self.humor_label_sdk = load_pickle(humor_label_file)\n",
-    "        self.of_d=75\n",
+    "        self.of_d=371\n",
     "        self.cvp_d=81\n",
+    "        self.glove_d=300\n",
+    "        self.total_dim=self.glove_d+self.of_d+self.cvp_d\n",
     "        self.max_context_len=max_context_len\n",
     "        self.max_sen_len=max_sen_len\n",
     "    \n",
@@ -105,9 +107,9 @@
     "        \n",
     "        #if there is no context\n",
     "        if not padded_context.any():\n",
-    "            return np.zeros((max_context_len,max_sen_len,456))\n",
+    "            return np.zeros((max_context_len,max_sen_len,self.total_dim))\n",
     "        \n",
-    "        return np.concatenate((np.zeros((pad_c_len,max_sen_len,456)),padded_context),axis=0)\n",
+    "        return np.concatenate((np.zeros((pad_c_len,max_sen_len,self.total_dim)),padded_context),axis=0)\n",
     "    \n",
     "    def padded_punchline_features(self,punchline_w,punchline_of,punchline_cvp,max_sen_len=20,left_pad=1):\n",
     "        \n",
@@ -123,11 +125,11 @@
     "    def __getitem__(self,index):\n",
     "        \n",
     "        hid=self.id_list[index]\n",
-    "        punchline_w=np.array(self.word_embedding_idx_sdk[hid]['punchline_embedding_indexes'])\n",
+    "        punchline_w=np.array(self.language_sdk[hid]['punchline_embedding_indexes'])\n",
     "        punchline_of=np.array(self.word_aligned_openface_sdk[hid]['punchline_features'])\n",
     "        punchline_cvp=np.array(self.word_aligned_covarep_sdk[hid]['punchline_features'])\n",
     "        \n",
-    "        context_w=np.array(self.word_embedding_idx_sdk[hid]['context_embedding_indexes'])\n",
+    "        context_w=np.array(self.language_sdk[hid]['context_embedding_indexes'])\n",
     "        context_of=np.array(self.word_aligned_openface_sdk[hid]['context_features'])\n",
     "        context_cvp=np.array(self.word_aligned_covarep_sdk[hid]['context_features'])\n",
     "        \n",
@@ -163,7 +165,7 @@
     {
      "data": {
       "text/plain": [
-       "16514"
+       "10166"
       ]
      },
      "execution_count": 4,
@@ -208,91 +210,91 @@
      "output_type": "stream",
      "text": [
       "*********\n",
-      "punchline shape:  torch.Size([10, 20, 456])\n",
-      "context shape:  torch.Size([10, 5, 20, 456])\n",
+      "punchline shape:  torch.Size([10, 20, 752])\n",
+      "context shape:  torch.Size([10, 5, 20, 752])\n",
       "humor labels:  tensor([[1.],\n",
       "        [0.],\n",
       "        [0.],\n",
       "        [1.],\n",
-      "        [1.],\n",
-      "        [1.],\n",
       "        [0.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [1.]])\n",
-      "*********\n",
-      "punchline shape:  torch.Size([10, 20, 456])\n",
-      "context shape:  torch.Size([10, 5, 20, 456])\n",
-      "humor labels:  tensor([[1.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
       "        [0.],\n",
       "        [0.],\n",
       "        [0.],\n",
       "        [1.],\n",
       "        [1.]])\n",
       "*********\n",
-      "punchline shape:  torch.Size([10, 20, 456])\n",
-      "context shape:  torch.Size([10, 5, 20, 456])\n",
+      "punchline shape:  torch.Size([10, 20, 752])\n",
+      "context shape:  torch.Size([10, 5, 20, 752])\n",
+      "humor labels:  tensor([[1.],\n",
+      "        [1.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [1.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [0.]])\n",
+      "*********\n",
+      "punchline shape:  torch.Size([10, 20, 752])\n",
+      "context shape:  torch.Size([10, 5, 20, 752])\n",
+      "humor labels:  tensor([[0.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [1.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [1.],\n",
+      "        [1.]])\n",
+      "*********\n",
+      "punchline shape:  torch.Size([10, 20, 752])\n",
+      "context shape:  torch.Size([10, 5, 20, 752])\n",
       "humor labels:  tensor([[0.],\n",
       "        [0.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
+      "        [1.],\n",
       "        [0.],\n",
       "        [0.],\n",
       "        [1.],\n",
-      "        [1.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
       "        [1.],\n",
       "        [0.]])\n",
       "*********\n",
-      "punchline shape:  torch.Size([10, 20, 456])\n",
-      "context shape:  torch.Size([10, 5, 20, 456])\n",
+      "punchline shape:  torch.Size([10, 20, 752])\n",
+      "context shape:  torch.Size([10, 5, 20, 752])\n",
       "humor labels:  tensor([[1.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [1.],\n",
       "        [1.],\n",
       "        [0.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
       "        [1.],\n",
       "        [1.],\n",
+      "        [0.],\n",
       "        [1.]])\n",
       "*********\n",
-      "punchline shape:  torch.Size([10, 20, 456])\n",
-      "context shape:  torch.Size([10, 5, 20, 456])\n",
+      "punchline shape:  torch.Size([10, 20, 752])\n",
+      "context shape:  torch.Size([10, 5, 20, 752])\n",
       "humor labels:  tensor([[0.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [0.],\n",
-      "        [1.],\n",
-      "        [1.],\n",
-      "        [0.]])\n",
-      "*********\n",
-      "punchline shape:  torch.Size([10, 20, 456])\n",
-      "context shape:  torch.Size([10, 5, 20, 456])\n",
-      "humor labels:  tensor([[1.],\n",
-      "        [1.],\n",
-      "        [1.],\n",
-      "        [1.],\n",
       "        [1.],\n",
       "        [1.],\n",
       "        [0.],\n",
+      "        [0.],\n",
       "        [1.],\n",
-      "        [1.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
       "        [1.]])\n"
      ]
     }
    ],
    "source": [
     "'''\n",
-    "x_p.shape=batch_size*maximum number of words in sentence * 456\n",
-    "x_c.shape = batch_size* maximum number of sentences in context*maximum number of words in sentence * 456\n",
-    "here 456 = word embedding (300) + covarep (81) + openface(75)  \n",
+    "x_p.shape=batch_size*maximum number of words in sentence * 752\n",
+    "x_c.shape = batch_size * maximum context length in #sentences * maximum sentence length in #words * 752\n",
+    "here 752 = word embedding (300) + covarep (81) + openface(371)  \n",
     "'''\n",
     "\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
@@ -330,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
